--- a/control
+++ b/control
@@ -2,13 +2,13 @@ Source: karlyriceditor
 Section: utils
 Priority: extra
 Maintainer: Martin Steghöfer <martin@steghoefer.eu>
-Build-Depends: debhelper (>= 8), autotools-dev, dpkg-dev (>= 1.16), qt4-qmake, libavformat-dev, pkg-config, libswscale-dev, libsdl1.2-dev, libqt4-dev-bin, libqt4-dev, docbook-to-man
+Build-Depends: debhelper (>= 8), autotools-dev, dpkg-dev (>= 1.16), qt4-qmake, libavformat-dev, libavresample-dev, pkg-config, libswscale-dev, libsdl1.2-dev, libqt4-dev-bin, libqt4-dev, docbook-to-man
 Standards-Version: 3.9.3
 Homepage: http://sourceforge.net/projects/karlyriceditor/
 
 Package: karlyriceditor
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}, libavformat53, libavcodec53, libswscale2, libavutil51, libsdl1.2debian, libqtgui4
+Depends: ${shlibs:Depends}, ${misc:Depends}, libavformat53, libavcodec53, libswscale2, libavutil51, libavresample1, libsdl1.2debian, libqtgui4
 Description: karaoke lyrics editor
  A Qt-based GUI application to edit and test Karaoke lyrics in popular formats.
  Features full support for non-English languages, support for CDG, LRC and
