--- a/control
+++ b/control
@@ -5,6 +5,8 @@ Maintainer: Martin Steghöfer <martin@steghoefer.eu>
 Build-Depends: debhelper (>= 8), autotools-dev, dpkg-dev (>= 1.16), qt4-qmake, libavformat-dev, libavresample-dev, pkg-config, libswscale-dev, libsdl1.2-dev, libqt4-dev-bin, libqt4-dev, docbook-to-man
 Standards-Version: 3.9.5
 Homepage: http://sourceforge.net/projects/karlyriceditor/
+Vcs-Git: https://github.com/martin-steghoefer/debian-karlyriceditor.git
+Vcs-Browser: https://github.com/martin-steghoefer/debian-karlyriceditor
 
 Package: karlyriceditor
 Architecture: any
