--- a/debian/control
+++ b/debian/control
@@ -1,6 +1,6 @@
 Source: karlyriceditor
 Section: utils
-Priority: extra
+Priority: optional
 Maintainer: Martin Steghöfer <martin@steghoefer.eu>
 Build-Depends: debhelper (>= 8), autotools-dev, dpkg-dev (>= 1.16), qt4-qmake, libavformat-dev (>= 6:10), libavresample-dev (>= 6:10), pkg-config, libswscale-dev, libsdl1.2-dev, libqt4-dev-bin, libqt4-dev, docbook-to-man
 Standards-Version: 3.9.5
