--- a/debian/rules
+++ b/debian/rules
@@ -1,9 +1,6 @@
 #!/usr/bin/make -f
 
-export CPPFLAGS:=$(shell dpkg-buildflags --get CPPFLAGS)
-export CFLAGS:=$(shell dpkg-buildflags --get CFLAGS)
-export CXXFLAGS:=$(shell dpkg-buildflags --get CXXFLAGS)
-export LDFLAGS:=$(shell dpkg-buildflags --get LDFLAGS)
+export DEB_BUILD_MAINT_OPTIONS:=hardening=+all
 
 # Use qt4's qmake executable
 export QMAKE:="qmake-qt4"
